# HeatGeodesics

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/include/: HeatGeo.h
apps/src/: HeatGeo.cpp  main.cpp
cmake/: dependencies.cmake
libs/: CMakeLists.txt
libs/CLI11/: CMakeLists.txt
libs/io/: CMakeLists.txt
libs/io/include/: VTKwriter.h  obj.h  vtk.h
libs/io/src/: VTKwriter.cpp  obj.cpp  vtk.cpp
libs/mesh/: CMakeLists.txt
libs/mesh/include/: edge.h  face.h  vertex.h
libs/mesh/src/: edge.cpp  face.cpp  vertex.cpp
